# tf_gd_lib

./: .travis.yml  CMakeLists.txt  README.md  UnitGradDescent.cpp  UnitGradDescent.h  UnitSpline.cpp  UnitSpline.h  UnitTableFunctions.cpp  UnitTableFunctions.h  test_data.txt  tests.cpp
